...
    <string name="login_ok_message">Você está logado!</string>
    <string name="error_autentication_message">Por favor, faça o login novamente.</string>
    <string name="erro_autenticantion_title">Erro de autenticação</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>

    <string name="color_primary">#ff4500</string>
    <string name="edit">Editar</string>
    <string name="create">Cadastrar cubee</string>
    <string name="confirm_new_password">Confirme a nova senha</string>
    <string name="error_password_match">Senha não confere</string>
    <string name="number_invalid">Telefone inválido</string>
    <string name="error_invalid_name">Nome inválido</string>
    <string name="save">Salvar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="visualize_profile">Visualizar usuário</string>
    <string name="exit">Sair</string>
    <string name="editing">Editando</string>
    <string name="id_cubee">Id do Cubee</string>
    <string name="name_cubee">Nome do Cubee</string>
    <string name="register_cubee">Registrar cubee</string>
    <string name="home_screen">Tela inicial</string>
    <string name="error_register_cubee_title">Erro ao cadastrar cubee</string>
    <string name="try_again">Tente novamente</string>
    <string name="edit_cubees">Editar    cubees</string>
    <string name="rename">Renomear</string>
    <string name="rename_cubee">Erro ao renomear o cubee</string>
...
