...
                android:layout_height="wrap_content"
                android:hint="@string/id_cubee"
                android:inputType="textAutoComplete"
                android:maxLines="1" />

            <AutoCompleteTextView
                android:id="@+id/edt_cubee_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_cubee"
                android:inputType="textAutoComplete"
                android:maxLines="1" />


            <Button
                android:id="@+id/btn_create_cubee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="40dp"
                android:layout_marginBottom="100dp"
                android:text="@string/create" />
...
