...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   >

    <android.support.v7.widget.Toolbar
        android:id="@+id/top_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:background="@mipmap/img_statusbar">
...
            android:src="@mipmap/btn_home"
            android:scaleType="fitXY"
            android:padding="0dp"
            android:contentDescription="@string/home_screen" />

        <ImageButton
            android:id="@+id/ibtn_add_cubee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/cubee_add"
            android:layout_gravity="center"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:scaleType="fitXY"
...
