...
                android:layout_marginTop="59dp"
                android:layout_gravity="center"
                app:srcCompat="@mipmap/defalt_cubee_user" />


            <TextView
                android:id="@+id/name_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_user"
                android:maxLines="1" />

            <TextView
...
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:maxLines="1" />


            <Button
                android:id="@+id/edit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/edit" />

        </LinearLayout>
...
