...
                android:hint="@string/new_password"
                android:inputType="textPassword"
                android:imeOptions="actionNext"
                android:maxLines="1" />

            <EditText
                android:id="@+id/confirm_password_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_new_password"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:maxLines="1" />


            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/save" />
        </LinearLayout>

...
